--- a/mastering-react/package.json
+++ b/mastering-react/package.json
@@ -6,19 +6,29 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack -d --watch",
-    "build" : "webpack -p"
+    "build": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.5",
+    "browserify": "^11.2.0",
+    "joi": "^6.8.1",
+    "joi-validation-strategy": "^0.2.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-validation-mixin": "^5.2.0",
     "webpack": "^2.3.2"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.5",
+    "browserify": "^11.2.0",
+    "joi": "^6.8.1",
+    "joi-validation-strategy": "^0.2.1",
+    "react-validation-mixin": "^5.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1"
   }
