--- a/.eslintrc
+++ b/.eslintrc
@@ -7,5 +7,24 @@
       "modules": true,
       "experimentalObjectRestSpread": true
     }
+  },
+  "plugins": [
+    "react",
+    "react-native"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "rules": {
+    "comma-dangle": 0,
+    "react-native/no-unused-styles": 2,
+    "react-native/split-platform-components": 2
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "0.14.8"
+    }
   }
 }
