--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,9 @@
     "react-native/no-unused-styles": 2,
     "react-native/split-platform-components": 2
   },
+  "env": {
+    "node": true
+  },
   "settings": {
     "react": {
       "pragma": "React",
