--- a/react-native/HelloWorld/package.json
+++ b/react-native/HelloWorld/package.json
@@ -12,7 +12,9 @@
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
+		"babel-preset-flow": "^6.23.0",
 		"babel-preset-react-native": "1.9.2",
+		"flow-bin": "^0.47.0",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.6"
 	},
