--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
   ],
   "rules": {
     "comma-dangle": 0,
+    "no-console": 0,
     "react-native/no-unused-styles": 2,
     "react-native/split-platform-components": 2
   },
