--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -27,6 +27,7 @@
 		"waderyan.gitblame",
 		"webstp.extension-manager",
 		"wmira.react-playground-vscode",
-		"flowtype.flow-for-vscode"
+		"flowtype.flow-for-vscode",
+		"jasonlhy.vscode-browser-sync"
 	]
 }
