--- a/react-gallery/package.json
+++ b/react-gallery/package.json
@@ -5,16 +5,29 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "flow": "flow",
+    "flowstart": "flow start",
+    "flowstop": "flow stop",
+    "flowstatus": "flow status",
+    "flowcoverage": "flow coverage",
     "start": "webpack-dev-server"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.42.0",
     "react-hot-loader": "^1.3.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
