--- a/react-native/firstnative/package.json
+++ b/react-native/firstnative/package.json
@@ -8,8 +8,8 @@
 		"flow": "flow"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.12",
-		"react-native": "0.45.1"
+		"react": "^16.0.0-alpha.13",
+		"react-native": "^0.45.1"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
